--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
     <style>
         * {
-            font-family: PT Sans;
-            font-size: 13px;
+            font-family: PT Mono;
+            font-size: 12px;
             font-weight: lighter;
             margin: 0px;
             padding: 0px;
@@ -18,8 +19,7 @@
             outline: none;
         }
         .page {
-            line-height: 17px;
-            word-spacing: 10px;
+            line-height: 20px;
             padding: 30px;
         }
         .letter {
@@ -28,10 +28,11 @@
         }
         .paint {
             position: absolute;
-            top: 2px;
-            left: -1px;
-            width: 100%;
-            height: 11px;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 110%;
+            height: 85%;
             z-index: -1;
         }
         .navigation {
@@ -55,6 +56,34 @@
         .next {
             float: right;
         }
+        .paginator {
+            width: 100%;
+            clear: both;
+            padding: 0 100px 0 100px;
+            box-sizing: border-box;
+        }
+
+        .paginator>div {
+            display: inline-block;
+            font-size: 9px;
+            margin-right: 4px;
+            color: lightslategray;
+            cursor: pointer;
+        }
+        .paginator>div:hover {
+            color: black;
+        }
+        .info {
+            clear: both;
+            color: gray;
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        .info>div {
+            display: inline-block;
+        }
     </style>
 </head>
 
@@ -64,7 +93,11 @@
     <div class="navigation">
         <div class="prev button"><</div>
         <div class="next button">></div>
+        <div class="info">
+            <div class="pageNum"></div> / <div class="totalPages"></div>
+        </div>
     </div>
+    <div class="paginator"></div>
     <script src="./app.js" type="text/javascript"></script>
 </body>
 
