--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         .page {
             line-height: 20px;
-            padding: 30px;
+            padding: 10px;
         }
         .letter {
             letter-spacing: 2px;
@@ -41,7 +41,7 @@
         }
         .button {
             width: 45%;
-            height: 100px;
+            height: 70px;
             text-align: center;
             font-size: 50px;
             color: gray;
@@ -59,15 +59,16 @@
         .paginator {
             width: 100%;
             clear: both;
-            padding: 0 100px 0 100px;
+            padding: 0 10px 10px 10px;
             box-sizing: border-box;
+            text-align: left;
         }
 
         .paginator>div {
             display: inline-block;
-            font-size: 9px;
+            font-size: 6px;
             margin-right: 4px;
-            color: lightslategray;
+            color: #aaa;
             cursor: pointer;
         }
         .paginator>div:hover {
