--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         .page {
             line-height: 20px;
             padding: 10px;
+            max-width: 700px;
+            margin: 0 auto;
         }
         .letter {
             letter-spacing: 2px;
@@ -90,6 +92,7 @@
 
 <body>
     <div class="page">
+        Loading... Please wait.
     </div>
     <div class="navigation">
         <div class="prev button"><</div>
